<resources>
    <string name="app_name">Sunmera</string>

    <string name="hello_world">Hello world!</string>

    <!--action bar stuffs-->
    <string name="str_action_settings">Settings</string>
    <string name="str_action_take_pic">Take a Photo</string>
    <string name="str_action_test">Test</string>
    <string name="str_action_add_user">Add user</string>

    <!--tabs labels-->
    <string name="str_tab_calendar">Calendar</string>
    <string name="str_tab_category">Feeling</string>
    <string name="str_tab_poster">Poster</string>

    <!--buttons-->
    <string name="str_button_save">Save</string>
    <string name="str_button_discard">Discard</string>
    <string name="str_button_cancel">Cancel</string>
    <string name="str_button_delete">Delete</string>
    <string name="str_button_back">Back</string>
    <string name="str_button_confirm">OK</string>
    <string name="str_button_submit">Submit</string>
    <string name="str_button_add">Add</string>
    <string name="str_button_poster">Saved Posters</string>

    <string name="str_category_emotion_text">Test emotion</string>

    <string name="str_button_take_a_photo">Take a picture</string>
    <string name="str_button_choose_from_gallery">Choose from gallery</string>

    <!--text box-->
    <string name="str_text_input_note">Note</string>
    <string name="str_text_retake">Tap the image to retake the photo</string>

    <string name="str_text_happiest">The happiest</string>
    <string name="str_text_exciting">The most exciting</string>
    <string name="str_text_greateful">The most grateful</string>
    <string name="str_text_awesome">The most awesome</string>

    <!--toasts-->
    <string name="str_toast_saved">Saved</string>
    <string name="str_toast_deleted">Deleted</string>
    <string name="str_poster_not_completed">Please select an image for each item</string>

    <!--titles-->
    <string name="str_title_how_you_feel">How do you feel?</string>
    <string name="str_title_input_type">Choose source</string>
    <string name="str_title_confirm">Are you sure?</string>

    <string name="str_title_grateful">Grateful</string>
    <string name="str_title_excellent">Excellent</string>
    <string name="str_title_exciting">Exciting</string>
    <string name="str_title_happy">Happy</string>
    <string name="str_title_bored">Bored</string>
    <string name="str_title_sad">Sad</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_test">Test</string>
    <string name="title_activity_camera">Photo</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_specific_view">View</string>
    <string name="title_activity_callery">Gallery</string>
    <string name="title_activity_category_gallery">Gallery</string>
    <string name="title_activity_saved_posters">Saved Posters</string>
    <string name="title_activity_main">Sunmera</string>

    <string name="title_activity_emotion">NULL</string>
    <string name="title_activity_assign_mood">NULL</string>
    <string name="title_activity_photo_gallery">PhotoGalleryActivity</string>
    <string name="title_activity_gallery">Gallery</string>
    <string name="title_activity_poster_gallery">Gallery</string>

</resources>
